kubernetes/umami-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
  namespace: umami
spec:
  selector:
    matchLabels:
      app: umami
  replicas: 2
  template:
    metadata:
      labels:
        app: umami
    spec:
      containers:
      - name: umami
        image: ghcr.io/umami-software/umami:postgresql-latest
        ports:
        - containerPort: 8080
          name: umami
