kubernetes/umami-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: umami
spec:
  ports:
  - port: 5432
    name: postgres
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: umami
  namespace: umami
spec:
  type:nodePort
  ports:
  - port: 3000
  selector:
    app: umami
